fixed keyboard interaction mobile

--- a/css/terminal.css
+++ b/css/terminal.css
@@ -13,7 +13,7 @@ body,
 
 body {
     margin: 0;
-    height: 100vh;
+    height: 100dvh;
     font-variant-ligatures: none;
 }
 
